// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcUserInfo should not show text when collapsed 1`] = `
<div
  class="ec-user-info"
  data-test="ec-user-info"
>
  <img
    alt="Ebury Demo 2 gravatar"
    class="ec-user-info__avatar"
    data-test="ec-user-info__avatar"
    src="https://www.gravatar.com/avatar/e07fd6efc70ccc63bbc3a3e27b81b29e?d=mm&s=200"
  />
  <transition-stub
    appear="false"
    css="true"
    name="ec-user-info__client-fade"
    persisted="false"
  >
    <!--v-if-->
  </transition-stub>
</div>
`;

exports[`EcUserInfo should render as expected 1`] = `
<div
  class="ec-user-info"
  data-test="ec-user-info"
>
  <img
    alt="Ebury Demo 2 gravatar"
    class="ec-user-info__avatar"
    data-test="ec-user-info__avatar"
    src="https://www.gravatar.com/avatar/e07fd6efc70ccc63bbc3a3e27b81b29e?d=mm&s=200"
  />
  <transition-stub
    appear="false"
    css="true"
    name="ec-user-info__client-fade"
    persisted="false"
  >
    <div
      class="ec-user-info__client-wrapper"
    >
      <a
        class="ec-user-info__client-name"
        data-test="ec-user-info__client-name"
        href="/profile"
      >
        Ebury Demo 2
      </a>
      
      
    </div>
  </transition-stub>
</div>
`;

exports[`EcUserInfo should render slot for client selector 1`] = `
<div
  class="ec-user-info"
  data-test="ec-user-info"
>
  <img
    alt="Ebury Demo 2 gravatar"
    class="ec-user-info__avatar"
    data-test="ec-user-info__avatar"
    src="https://www.gravatar.com/avatar/e07fd6efc70ccc63bbc3a3e27b81b29e?d=mm&s=200"
  />
  <transition-stub
    appear="false"
    css="true"
    name="ec-user-info__client-fade"
    persisted="false"
  >
    <div
      class="ec-user-info__client-wrapper"
    >
      <a
        class="ec-user-info__client-name"
        data-test="ec-user-info__client-name"
        href="/profile"
      >
        Ebury Demo 2
      </a>
      
      <select>
        <option
          value="ebury"
        >
          Ebury
        </option>
        <option
          value="eburydemo2"
        >
          EburyDemo2
        </option>
      </select>
      
    </div>
  </transition-stub>
</div>
`;

exports[`EcUserInfo should show text when not collapsed 1`] = `
<div
  class="ec-user-info"
  data-test="ec-user-info"
>
  <img
    alt="Ebury Demo 2 gravatar"
    class="ec-user-info__avatar"
    data-test="ec-user-info__avatar"
    src="https://www.gravatar.com/avatar/e07fd6efc70ccc63bbc3a3e27b81b29e?d=mm&s=200"
  />
  <transition-stub
    appear="false"
    css="true"
    name="ec-user-info__client-fade"
    persisted="false"
  >
    <div
      class="ec-user-info__client-wrapper"
    >
      <a
        class="ec-user-info__client-name"
        data-test="ec-user-info__client-name"
        href="/profile"
      >
        Ebury Demo 2
      </a>
      
      
    </div>
  </transition-stub>
</div>
`;
